# misc-winlibs

include/: console.h  dirent.h  gmp.h  rfc2045.h  rfc822.h  uxnt.h
include/geos/: Makefile.am  platform.h.vc
include/geos/geom/: Makefile.am  PrecisionModel.h  PrecisionModel.inl
include/geos/geom/util/: Makefile.am
include/geos/io/: WKBWriter.h
include/geos/noding/: Makefile.am  NodedSegmentString.h
include/geos/noding/snapround/: Makefile.am
include/geos/operation/: Makefile.am
include/geos/operation/buffer/: Makefile.am
include/geos/operation/union/: Makefile.am
include/geos/util/: Makefile.am
include/spatialindex/: Makefile  Makefile.in
include/spatialindex/capi/: Makefile  Makefile.in  sidx_impl.h
include/spatialindex/tools/: Makefile  Makefile.in
lib/: archive_static.lib  gmp.lib  libjpeg.lib  libpl.exp  libpl.lib  plterm.exp  plterm.lib  pthreadVC.lib  pthreadVC2.lib  rfc2045.lib  rfc822.lib  spatialindex_i.lib  swipl.exp  swipl.lib  uxnt.lib  xpm.lib
