# $Id: Makefile.am 2844 2010-01-13 03:03:38Z mloskot $
#
# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
#
SUBDIRS = \
    buffer \
    distance \
    linemerge \
    overlay \
    polygonize \
    predicate \
    relate \
    union \
    valid 

#EXTRA_DIST = 

geosdir = $(includedir)/geos/operation

geos_HEADERS = \
    GeometryGraphOperation.h \
    IsSimpleOp.h
