# $Id: Makefile.am 2839 2010-01-13 00:43:42Z mloskot $
#
# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
#
#SUBDIRS = 

#EXTRA_DIST = 

geosdir = $(includedir)/geos/util

geos_HEADERS = \
    Assert.h \
    AssertionFailedException.h \
    CoordinateArrayFilter.h \
    GeometricShapeFactory.h \
    GEOSException.h \
    IllegalArgumentException.h \
    math.h \
    TopologyException.h \
    UniqueCoordinateArrayFilter.h \
    UnsupportedOperationException.h
