# $Id: Makefile.am 2839 2010-01-13 00:43:42Z mloskot $
#
# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
#
#SUBDIRS = 

#EXTRA_DIST = 

geosdir = $(includedir)/geos/geom/util

geos_HEADERS = \
    ComponentCoordinateExtracter.h \
    CoordinateOperation.h \
    GeometryCombiner.h \
    GeometryEditor.h \
    GeometryEditorOperation.h \
    GeometryTransformer.h \
    LinearComponentExtracter.h \
    PointExtracter.h \
    PolygonExtracter.h \
    ShortCircuitedGeometryVisitor.h
