# $Id: Makefile.am 2839 2010-01-13 00:43:42Z mloskot $
#
# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
#
#SUBDIRS = 

#EXTRA_DIST = 

geosdir = $(includedir)/geos/noding/snapround

geos_HEADERS = \
    HotPixel.h \
    HotPixel.inl \
    MCIndexPointSnapper.h \
    MCIndexSnapRounder.h \
    MCIndexSnapRounder.inl \
    SimpleSnapRounder.h
